--- a/web/WebContent/resources/css/style.css
+++ b/web/WebContent/resources/css/style.css
@@ -10,6 +10,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,400,600,700,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Baloo+Chettan&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Gugi:400');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:700');
+
 
 /*****---------------------------------------- 1) font-family: 'Rajdhani', sans-serif;
  2) font-family: 'Poppins', sans-serif;
@@ -33,6 +35,7 @@
 
 * {
      box-sizing: border-box !important;
+
 }
 
 .container {
@@ -87,6 +90,7 @@ h2 {
 }
 
 h3 {
+     font-family: 'Gugi', sans-serif;
      font-size: 18px;
 }
 
